src-ken&y/objects/Payment_Profile__c.object
<CustomObject>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Payment Profiles</relationshipLabel>
        <relationshipName>Payment_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Gateway__c</fullName>
        <label>Gateway</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Authorize.net</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Profile_ID__c</fullName>
        <externalId>true</externalId>
        <label>Payment Profile ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Payment Profile</label>
    <nameField>
        <label>Payment Profile</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>